[package]
name = "knativity"
license = "Apache-2.0"
repository = "https://codeberg.org/ikaros/knativity"
documentation = "https://docs.rs/knativity"
description = "Unofficial Rust SDK for Knative"

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
thiserror.workspace = true
url.workspace = true
tracing.workspace = true

cloudevents-sdk = { workspace = true, features = ["reqwest"] }

reqwest = "0.11"
backoff = "0.4.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
chrono = "0.4.34"
serde_json = "1.0.113"
tracing-subscriber.workspace = true
